--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
         }
 
         .code-example {
-            background: #1f2937;
-            color: #f9fafb;
+            background: #f8f9fa;
+            color: #2d3748;
             padding: 15px;
             border-radius: 10px;
             margin: 15px 0;
@@ -239,11 +239,11 @@
             position: absolute;
             top: 5px;
             right: 10px;
-            background: #374151;
+            background: #e2e8f0;
             padding: 2px 8px;
             border-radius: 5px;
             font-size: 11px;
-            color: #9ca3af;
+            color: #4a5568;
         }
 
         .code-example:hover {
