--- a/index.html
+++ b/index.html
@@ -224,12 +224,14 @@
         .code-example {
             background: #f8f9fa;
             color: #2d3748;
-            padding: 15px;
+            padding: 20px;
             border-radius: 10px;
-            margin: 15px 0;
+            margin: 20px 0;
             font-family: 'Fira Code', 'Consolas', monospace;
             font-size: 14px;
+            line-height: 1.6;
             overflow-x: auto;
+            white-space: pre-wrap;      /* 保持格式但允许换行 */
             position: relative;
             cursor: pointer;
         }
