important code-example color

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
         }
 
         .code-example {
-            background: #f8f9fa;
-            color: #2d3748;
+            background: #f8f9fa !important;
+            color: #2d3748 !important;
             padding: 20px;
             border-radius: 12px;
             margin: 20px 0;
